--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+  <!-- jQuery UI CSS -->
+    <link href="css/jquery-ui.css" rel="stylesheet">
+    <link href="css/jquery-ui.theme.css" rel="stylesheet">
+    <link href="css/jquery-ui.structure.css" rel="stylesheet">
+
   <!--Custom Styles -->
   <link href="css/styles.css" rel="stylesheet">
 
@@ -35,14 +40,17 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Option B</a>
+          <a class="nav-link" href="about.html">About</a>
         </li>
       </ul>
     </div>
   </nav>
+
+  <div id="dialog" title="Basic dialog">
+  <p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the &apos;x&apos; icon.</p>
+</div>
+
+<button id="opener">Open Dialog</button>
 
   <!-- View Selection Tabs-->
   <ul id="tab-nav" class="nav nav-tabs justify-content-center sticky-top">
@@ -58,7 +66,13 @@
     </div>
     <div id="list-view" class="tab-pane fade">
       <h1 id="list-title">North Carolina State Historic Sites</h1>
-      <div id="list"></div>
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <div id="list"></div>
+        </div>
+        <div class="col-md-2"></div>
+      </div>
     </div>
   </div>
 
@@ -76,6 +90,9 @@
 
   <!--Google Maps -->
   <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPV6ArjHSVyr82bUJEYcgT31OfrSluQL8&callback=initMap"></script>
+
+  <!--jQuery UI-->
+  <script src="js/jquery-ui.js"></script>
 
   <!--Main JS-->
   <script src="js/main.js"></script>
