--- a/index.html
+++ b/index.html
@@ -46,11 +46,14 @@
     </div>
   </nav>
 
+<div id="dialogBuilder">
+</div>
+
   <div id="dialog" title="Basic dialog">
   <p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the &apos;x&apos; icon.</p>
 </div>
 
-<button id="opener">Open Dialog</button>
+<!-- <button id="opener">Open Dialog</button> -->
 
   <!-- View Selection Tabs-->
   <ul id="tab-nav" class="nav nav-tabs justify-content-center sticky-top">
