--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
       <div clas="col-md-3"></div>
       <div clas="col-md-6">
         <h1>About</h1>
-        <p>All text and images used on this site are via the <a href="https://historicsites.nc.gov/catalog/search-all-historic-sites">NC State Historic Sites website</a></p>
+        <p>All text and images used on this site are via the <a id="shs-site" href="https://historicsites.nc.gov/catalog/search-all-historic-sites">NC State Historic Sites website</a></p>
       </div>
       <div clas="col-md-3"></div>
     </div>
