--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-  <!-- jQuery UI CSS -->
+  <!-- jQuery UI CSS-->
     <link href="css/jquery-ui.css" rel="stylesheet">
     <link href="css/jquery-ui.theme.css" rel="stylesheet">
     <link href="css/jquery-ui.structure.css" rel="stylesheet">
+
 
   <!--Custom Styles -->
   <link href="css/styles.css" rel="stylesheet">
@@ -46,14 +47,10 @@
     </div>
   </nav>
 
-<div id="dialogBuilder">
-</div>
 
-  <div id="dialog" title="Basic dialog">
-  <p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the &apos;x&apos; icon.</p>
-</div>
-
-<!-- <button id="opener">Open Dialog</button> -->
+<!-- <button id="opener">Open Dialog</button>
+<a href="#" onclick="$('#dialogpolk').dialog('open');">Learn More</a>
+-->
 
   <!-- View Selection Tabs-->
   <ul id="tab-nav" class="nav nav-tabs justify-content-center sticky-top">
@@ -80,6 +77,9 @@
   </div>
 
 
+  <div id="dialogBuilder">
+  </div>
+
 
 
   <!--jQuery -->
@@ -96,6 +96,7 @@
 
   <!--jQuery UI-->
   <script src="js/jquery-ui.js"></script>
+
 
   <!--Main JS-->
   <script src="js/main.js"></script>
